--- a/global.css
+++ b/global.css
@@ -1,21 +1,82 @@
-body { font-family: 'Noto Serif', serif;; }
+#container {
+    background: #53098c;
+    width: 100%;
+    padding: 1em;
+    margin-left: auto;
+    margin-right: auto;
+    
+}
+header { padding-left: 2em;
+        padding-right: 2em;
+            display: block;
 
-       }
+    
+}
+
+
+
+
+body { font-family: 'Noto Serif', serif; 
+}
+
+nav ul {
+    list-style: none;
+    padding-left: 0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    align-items: flex-end
+}
+nav li {
+    background-color: darkblue;
+        padding: 2em;
+        margin-left: 2em;
+        margin-right: 2em;
+}
+
+       
  a:link { color:#FF896F; }
        a:visited { color:#00FF00; }
        a:hover { color:#FF00FF; }
        a:active { color:#0000FF; }
 
-body { background-color: #EFE7BD; }
+article { background-color: #53098c;
+         column-count: 2;
+        column-fill: auto;
+        padding-right: 2em;
+}
 
-h2, h1  { color: rebeccapurple; } 
+p {background-color: #5f79c7
 
-li { color: rebeccapurple; } 
+
+
+}
+
+
+h2, h1  { color: #5f79c7; } 
+
+li { color: #5f79c7; } 
 
 img {width: 100%;}
 .image {width: 25em }
 body {font-size: 1.05em}
 line-height: 1.6;
+
+
+
+
+#container {
+    display: grid;
+    grid-template-columns: 30%;
+    grid-template-rows: auto;
+    grid-template-areas: 
+        "header header"
+        "body aside"
+        "foot foot"
+        
+        
+}
 
 
 
